--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ dist
 dist-ssr
 *.local
 
+# Environment & Secrets
+.env.local
+.env*.local
+service-account.json
+
+# API data
+data/contacts.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
